// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns template with category in url 1`] = `
Object {
  "sitemapindex": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": Array [
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemapcategory/sports?outputType=xml",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemapcategory/sports?outputType=xml&from=100",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemapcategory/sports?outputType=xml&from=200",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemapcategory/sports?outputType=xml&from=300",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemapcategory/sports?outputType=xml&from=400",
      },
    ],
  },
}
`;

exports[`returns template with default values 1`] = `
Object {
  "sitemapindex": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": Array [
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap?outputType=xml",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap?outputType=xml&from=100",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap?outputType=xml&from=200",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap?outputType=xml&from=300",
      },
      Object {
        "lastmod": "2020-04-07T15:02:08.918Z",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap?outputType=xml&from=400",
      },
    ],
  },
}
`;

exports[`returns template with empty values 1`] = `
Object {
  "sitemapindex": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": Array [
      Object {
        "loc": "http://demo-prod.origin.arcpublishing.com?",
      },
      Object {
        "loc": "http://demo-prod.origin.arcpublishing.com?from=100",
      },
      Object {
        "loc": "http://demo-prod.origin.arcpublishing.com?from=200",
      },
      Object {
        "loc": "http://demo-prod.origin.arcpublishing.com?from=300",
      },
      Object {
        "loc": "http://demo-prod.origin.arcpublishing.com?from=400",
      },
    ],
  },
}
`;

exports[`returns template with no content 1`] = `
Object {
  "sitemapindex": Object {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": Array [],
  },
}
`;
